src/main/java/org/example/invalidtx/InvalidTxApplication.java
package org.example.invalidtx;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class InvalidTxApplication {

    public static void main(String[] args) {
        SpringApplication.run(InvalidTxApplication.class, args);
    }

}
